# prog2-beleg

./: .gitignore  CMakeLists.txt  README.de  README.md  release.sh
doc/: Screen Design.epgz  UML.eap  copyright-header.txt  markdown.css
include/core/: AbstractDatabaseObjectFactory.h  Audio.h  Author.h  Author.priv.h  Book.h  CastableDatabaseObjectFactory.h  Database.h  Database.priv.h  DatabaseObject.h  DatabaseObject.priv.h  DatabaseObjectFactory.h  Lending.h  Lending.priv.h  LibraryUser.h  LibraryUser.priv.h  ManyToOneLazyLoader.h  Medium.h  Medium.priv.h  MediumCopy.h  MediumCopy.priv.h  PolymorphicDatabaseObjectFactory.h  Software.h  SqlConnection.h  SqlConnection.priv.h  SqlPreparedStatement.h  SqlPreparedStatement.priv.h  TelephoneNumber.h  Video.h  exceptions.h  query-builder.h
include/core/domain/: Audio.h  Author.h  Book.h  Lending.h  Lending.priv.h  LibraryUser.h  LibraryUser.priv.h  Medium.h  Medium.priv.h  MediumCopy.h  MediumCopy.priv.h  PostalAddress.h  PostalAddress.priv.h  Software.h  Video.h
include/core/sqlite/: SqliteConnection.h  SqliteConnection.priv.h  SqlitePreparedStatement.h  SqlitePreparedStatement.priv.h
include/gui/: App.h  Basket.h  BasketPanel.h  BasketWindow.h  BrowsePanel.h  DatabasePanel.h  DatabaseSearchTable.h  DatabaseWindow.h  EditorPanel.h  LendingsController.h  LendingsSearchTable.h  MainFrame.h  MediaBrowsePanel.h  MediaEditorPanel.h  MediaSearchTable.h  StatusbarDbConnection.h  TwoQuerySearchTable.h  UserBrowsePanel.h  UserEditorPanel.h  UserSearchTable.h  events.h  translations.h
include/service/: HttpRequest.h  exceptions.h
include/webservice/: CgiHttpRequest.h  exceptions.h
public_html/: index.html
src/core/: AbstractDatabaseObjectFactory.cpp  Audio.cpp  Author.cpp  Book.cpp  Database.cpp  DatabaseObject.cpp  DatabaseObjectFactory.cpp  Lending.cpp  LibraryUser.cpp  Medium.cpp  MediumCopy.cpp  Software.cpp  SqlConnection.cpp  SqlPreparedStatement.cpp  TelephoneNumber.cpp  Video.cpp  example.sql.cpp  exceptions.cpp  initialize.sql.cpp  query-builder.cpp
src/core/domain/: Audio.cpp  Author.cpp  Book.cpp  Lending.cpp  LibraryUser.cpp  Medium.cpp  MediumCopy.cpp  PostalAddress.cpp  Software.cpp  TelephoneNumber.cpp  Video.cpp
src/core/sqlite/: SqliteConnection.cpp  SqlitePreparedStatement.cpp
src/gui/: App.cpp  Basket.cpp  BasketPanel.cpp  BasketWindow.cpp  BrowsePanel.cpp  DatabasePanel.cpp  DatabaseSearchTable.cpp  DatabaseWindow.cpp  EditorPanel.cpp  LendingsController.cpp  LendingsSearchTable.cpp  MainFrame.cpp  MediaBrowsePanel.cpp  MediaEditorPanel.cpp  MediaSearchTable.cpp  StatusbarDbConnection.cpp  TwoQuerySearchTable.cpp  UserBrowsePanel.cpp  UserEditorPanel.cpp  UserSearchTable.cpp  events.cpp  main.cpp  translations.cpp
src/service/: CgiHttpRequest.cpp  HttpRequest.cpp  main.cpp
src/webservice/: CgiHttpRequest.cpp  HttpRequest.cpp  main.cpp
tests/core/: common.cpp  common.h  database.cpp  helloworld.cpp  lending.cpp  library-user.cpp  medium.cpp  phone-number.cpp  sql-abstraction.cpp  sqlite-learning.cpp
tests/webservice/: helloworld.cpp
